syntax = "proto3";

option go_package = "/proto";

message ClientPingRequest {
  bytes bytes=1;
}

message ServerPongResponse {
  bytes bytes=1;
}

message KcpConnectReq {
	string id =1;
}

message KcpConnectRsp {
	uint32 convId=1;
}
